fix: greener lime color

--- a/src/scss/plugins/extra-button-colors/_colors.scss
+++ b/src/scss/plugins/extra-button-colors/_colors.scss
@@ -8,8 +8,8 @@ $x-button-color-crimson-active: #6f0606;
 $x-button-color-purple:         #9c27b0;
 $x-button-color-purple-active:  #7b1fa2;
 
-$x-button-color-lime:           #c0ca33;
-$x-button-color-lime-active:    #9e9d24;
+$x-button-color-lime:           #9dca33;
+$x-button-color-lime-active:    #849e24;
 
 $x-button-color-brown:          #8d6e63;
 $x-button-color-brown-active:   #6d4c41;
