add: text alignment helpers

--- a/src/scss/utils/extra-classes.scss
+++ b/src/scss/utils/extra-classes.scss
@@ -25,9 +25,19 @@
   margin-right: auto;
 }
 
-// Center a text
+// Align center a text
 .text-center {
   text-align: center;
+}
+
+// Align left a text
+.text-left {
+  text-align: left;
+}
+
+// Align right a text
+.text-right {
+  text-align: right;
 }
 
 // Vertical line
