add: text selection color to match bkg

--- a/src/scss/base/meshki.scss
+++ b/src/scss/base/meshki.scss
@@ -60,10 +60,12 @@ hr {
 // Text selection color
 ::selection {
   background: $text-selection-color; // WebKit/Blink Browsers
+  color: $background-color;
 }
 
 ::-moz-selection {
   background: $text-selection-color; // Gecko Browsers
+  color: $background-color;
 }
 
 // Self Clearing Goodness
