add: flexbox system

--- a/src/scss/layout/_module.scss
+++ b/src/scss/layout/_module.scss
@@ -1,3 +1,4 @@
 // You may add other layouts here. Meshki comes with a grid layout for now.
-// A flexbox layout might be added later, addressing the #4 issue.
 @import 'grid';
+@import 'flex';
+@import 'general';
