fix: single line filled code not colored properly

--- a/src/scss/components/code.scss
+++ b/src/scss/components/code.scss
@@ -9,7 +9,7 @@ code {
   white-space: nowrap;
 
   // Single code, filled style
-  .filled {
+  &.filled {
     background-color: $text-color;
     color: $meshki-black;
   }
