add: scrollbar colors

--- a/src/scss/utils/variables/_colors.scss
+++ b/src/scss/utils/variables/_colors.scss
@@ -62,3 +62,8 @@ $form-color-placeholder:           #6a6a6a;
 $table-color-border:               #7c7c7c;
 $table-color-striped:              #2f2f2f;
 $table-color-hover:                #404040;
+
+// Other Colors //================================
+$scrollbar-color-bg:               #404040;
+$scrollbar-color-front:            #bebebe;
+$scrollbar-color-hover:            $text-color;
