--- a/src/scss/components/sidenav.scss
+++ b/src/scss/components/sidenav.scss
@@ -1,3 +1,12 @@
+// Sidenav variables
+$sidenav-width:                    275px;
+$sidenav-animation-duration:       .5s;
+$sidenav-text-animation-duration:  .3s;
+
+:root {
+  --sidenav-width: #{$sidenav-width};
+}
+
 // The side navigation menu
 .sidenav {
   background-color: $sidenav-color-bg;
@@ -7,7 +16,7 @@
   padding-top: 15px;
   position: fixed;
   top: 0;
-  transition: .5s;
+  transition: $sidenav-animation-duration;
   width: 0; // changes with meshki.js
   z-index: 10; // Stays on top of everything, unless a modal is implemented
 
@@ -39,7 +48,7 @@
     outline: 0 !important;
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    transition: .3s;
+    transition: $sidenav-text-animation-duration;
     white-space: nowrap;
 
     &:hover {
@@ -100,7 +109,7 @@
   opacity: 0;
   position: fixed;
   top: 0;
-  transition: opacity .5s, visibility .5s;
+  transition: opacity $sidenav-animation-duration, visibility $sidenav-animation-duration;
   visibility: hidden;
   width: 100%;
   z-index: 1;
