--- a/src/scss/components/_module.scss
+++ b/src/scss/components/_module.scss
@@ -1,10 +1,10 @@
-@import 'typography';
+@import 'anchor';
 @import 'button';
 @import 'form';
 
+@import 'footer';
 @import 'navbar';
 @import 'sidenav';
-@import 'footer';
 
 @import 'list';
 @import 'table';
