--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,10 +1,10 @@
 // Removed focus outlines, especially in Firefox
-@include create-button(':focus') {
+@include button-mixin(':focus') {
   outline: 0 !important;
 }
 
 // Simple button, with no style
-@include create-button  {
+@include button-mixin  {
   -moz-transition: all .3s !important;
   -o-transition: all .3s  !important;
   -webkit-transition: all .3s  !important;
@@ -23,116 +23,116 @@
   text-decoration: none;
 }
 
-@include create-button('.small')  {
+@include button-mixin('.small')  {
   font-size: 1.2rem;
 }
 
-@include create-button('.medium')  {
+@include button-mixin('.medium')  {
   font-size: 1.6rem;
 }
 
-@include create-button('.large')  {
+@include button-mixin('.large')  {
   font-size: 2.2rem;
 }
 
 // Simple button's hover
-@include create-button(':hover') {
+@include button-mixin(':hover') {
   background-color: $button-color-simple;
   border-color: $button-color-simple;
   color: $meshki-black;
 }
 
 // Simple button's active
-@include create-button(':active') {
+@include button-mixin(':active') {
   background-color: $button-color-simple-active;
   border-color: $button-color-simple-active;
 }
 
 // Disabled button
-@include create-button(':disabled') {
+@include button-mixin(':disabled') {
   border-color: $button-color-disabled;
   color: $button-color-disabled;
   pointer-events: none;
 }
 
-@include create-button('.disabled') {
+@include button-mixin('.disabled') {
   border-color: $button-color-disabled;
   color: $button-color-disabled;
   pointer-events: none;
 }
 
 // Blue button
-@include create-button('.blue') {
+@include button-mixin('.blue') {
   border: 2px $button-color-blue solid;
   color: $button-color-blue;
 }
 
 // Blue button's hover
-@include create-button('.blue:hover') {
+@include button-mixin('.blue:hover') {
   background-color: $button-color-blue;
   border-color: $button-color-blue;
   color: $meshki-black;
 }
 
 // Blue button's active
-@include create-button('.blue:active') {
+@include button-mixin('.blue:active') {
   background-color: $button-color-blue-active;
   border-color: $button-color-blue-active;
 }
 
 // Green button
-@include create-button('.green') {
+@include button-mixin('.green') {
   border: 2px $button-color-green solid;
   color: $button-color-green;
 }
 
 // Green button's hover
-@include create-button('.green:hover') {
+@include button-mixin('.green:hover') {
   background-color: $button-color-green;
   border-color: $button-color-green;
   color: $meshki-black;
 }
 
 // Green button's active
-@include create-button('.green:active') {
+@include button-mixin('.green:active') {
   background-color: $button-color-green-active;
   border-color: $button-color-green-active;
 }
 
 // Red button
-@include create-button('.red') {
+@include button-mixin('.red') {
   border: 2px $button-color-red solid;
   color: $button-color-red;
 }
 
 // Red button's hover
-@include create-button('.red:hover') {
+@include button-mixin('.red:hover') {
   background-color: $button-color-red;
   border-color: $button-color-red;
   color: $meshki-black;
 }
 
 // Red button's active
-@include create-button('.red:active') {
+@include button-mixin('.red:active') {
   background-color: $button-color-red-active;
   border-color: $button-color-red-active;
 }
 
 // Orange button
-@include create-button('.orange') {
+@include button-mixin('.orange') {
   border: 2px $button-color-orange solid;
   color: $button-color-orange;
 }
 
 // Orange button's hover
-@include create-button('.orange:hover') {
+@include button-mixin('.orange:hover') {
   background-color: $button-color-orange;
   border-color: $button-color-orange;
   color: $meshki-black;
 }
 
 // Orange button's active
-@include create-button('.orange:active') {
+@include button-mixin('.orange:active') {
   background-color: $button-color-orange-active;
   border-color: $button-color-orange-active;
 }
