--- a/src/scss/layout/_module.scss
+++ b/src/scss/layout/_module.scss
@@ -1,4 +1,5 @@
 // You may add other layouts here. Meshki comes with a grid layout for now.
+@import 'layout';
 @import 'grid';
 @import 'flex';
-@import 'general';
+@import 'utils';
