--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,3 +1,11 @@
+// Misc.
+$general-animation-duration:         .3s;
+
+:root {
+  --general-animation-duration: #{$general-animation-duration};
+}
+
+// Typography Variables
 $font-family:              'Open Sans', sans-serif;
 $font-weight:              400;
 $font-size-after:          1.6rem;
