--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -1,3 +1,20 @@
+@import 'colors';
+@import 'variables';
+
+// Base Styles
+html {
+  font-size: $font-size-global;
+}
+
+// General attributes of the body tag
+body {
+  color: $text-color;
+  font-family: $font-family;
+  font-size: $font-size-body;
+  font-weight: $font-weight;
+  line-height: $font-line-height;
+}
+
 h1,
 h2,
 h3,
