--- a/src/scss/layout/utils.scss
+++ b/src/scss/layout/utils.scss
@@ -1,3 +1,6 @@
+@import '../base/colors';
+@import 'variables';
+
 // Make element full width
 .expand {
   box-sizing: border-box;
@@ -21,8 +24,7 @@
 
 // Center an element
 .centerize {
-  margin-left: auto;
-  margin-right: auto;
+  @include centerize;
 }
 
 // Align center a text
