--- a/src/scss/plugins/extra-button-colors/main.scss
+++ b/src/scss/plugins/extra-button-colors/main.scss
@@ -14,157 +14,158 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import '../meshki';
+@import '../../utils/module';
+@import '../../base/colors';
 @import 'colors';
 
 // Yellow button
-@include create-button('.yellow') {
+@include button-mixin('.yellow') {
   border: 2px $x-button-color-yellow solid;
   color: $x-button-color-yellow;
 }
 
 // Yellow button's hover
-@include create-button('.yellow:hover') {
+@include button-mixin('.yellow:hover') {
   background-color: $x-button-color-yellow;
   border-color: $x-button-color-yellow;
   color: $meshki-black;
 }
 
 // Yellow button's active
-@include create-button('.yellow:active') {
+@include button-mixin('.yellow:active') {
   background-color: $x-button-color-yellow-active;
   border-color: $x-button-color-yellow-active;
 }
 
 // Crimson button
-@include create-button('.crimson') {
+@include button-mixin('.crimson') {
   border: 2px $x-button-color-crimson solid;
   color: $x-button-color-crimson;
 }
 
 // Crimson button's hover
-@include create-button('.crimson:hover') {
+@include button-mixin('.crimson:hover') {
   background-color: $x-button-color-crimson;
   border-color: $x-button-color-crimson;
   color: $text-color;
 }
 
 // Crimson button's active
-@include create-button('.crimson:active') {
+@include button-mixin('.crimson:active') {
   background-color: $x-button-color-crimson-active;
   border-color: $x-button-color-crimson-active;
 }
 
 // Purple button
-@include create-button('.purple') {
+@include button-mixin('.purple') {
   border: 2px $x-button-color-purple solid;
   color: $x-button-color-purple;
 }
 
 // Purple button's hover
-@include create-button('.purple:hover') {
+@include button-mixin('.purple:hover') {
   background-color: $x-button-color-purple;
   border-color: $x-button-color-purple;
   color: $text-color;
 }
 
 // Purple button's active
-@include create-button('.purple:active') {
+@include button-mixin('.purple:active') {
   background-color: $x-button-color-purple-active;
   border-color: $x-button-color-purple-active;
 }
 
 // Lime button
-@include create-button('.lime') {
+@include button-mixin('.lime') {
   border: 2px $x-button-color-lime solid;
   color: $x-button-color-lime;
 }
 
 // Lime button's hover
-@include create-button('.lime:hover') {
+@include button-mixin('.lime:hover') {
   background-color: $x-button-color-lime;
   border-color: $x-button-color-lime;
   color: $meshki-black;
 }
 
 // Lime button's active
-@include create-button('.lime:active') {
+@include button-mixin('.lime:active') {
   background-color: $x-button-color-lime-active;
   border-color: $x-button-color-lime-active;
 }
 
 // Brown button
-@include create-button('.brown') {
+@include button-mixin('.brown') {
   border: 2px $x-button-color-brown solid;
   color: $x-button-color-brown;
 }
 
 // Brown button's hover
-@include create-button('.brown:hover') {
+@include button-mixin('.brown:hover') {
   background-color: $x-button-color-brown;
   border-color: $x-button-color-brown;
   color: $text-color;
 }
 
 // Brown button's active
-@include create-button('.brown:active') {
+@include button-mixin('.brown:active') {
   background-color: $x-button-color-brown-active;
   border-color: $x-button-color-brown-active;
 }
 
 // Space button
-@include create-button('.space') {
+@include button-mixin('.space') {
   border: 2px $x-button-color-space solid;
   color: $x-button-color-space;
 }
 
 // Space button's hover
-@include create-button('.space:hover') {
+@include button-mixin('.space:hover') {
   background-color: $x-button-color-space;
   border-color: $x-button-color-space;
   color: $text-color;
 }
 
 // Space button's active
-@include create-button('.space:active') {
+@include button-mixin('.space:active') {
   background-color: $x-button-color-space-active;
   border-color: $x-button-color-space-active;
 }
 
 // Rose button
-@include create-button('.rose') {
+@include button-mixin('.rose') {
   border: 2px $x-button-color-rose solid;
   color: $x-button-color-rose;
 }
 
 // Rose button's hover
-@include create-button('.rose:hover') {
+@include button-mixin('.rose:hover') {
   background-color: $x-button-color-rose;
   border-color: $x-button-color-rose;
   color: $text-color;
 }
 
 // Rose button's active
-@include create-button('.rose:active') {
+@include button-mixin('.rose:active') {
   background-color: $x-button-color-rose-active;
   border-color: $x-button-color-rose-active;
 }
 
 // Cyan button
-@include create-button('.cyan') {
+@include button-mixin('.cyan') {
   border: 2px $x-button-color-cyan solid;
   color: $x-button-color-cyan;
 }
 
 // Cyan button's hover
-@include create-button('.cyan:hover') {
+@include button-mixin('.cyan:hover') {
   background-color: $x-button-color-cyan;
   border-color: $x-button-color-cyan;
   color: $meshki-black;
 }
 
 // Cyan button's active
-@include create-button('.cyan:active') {
+@include button-mixin('.cyan:active') {
   background-color: $x-button-color-cyan-active;
   border-color: $x-button-color-cyan-active;
 }
