--- a/src/scss/utils/mixins/_form.scss
+++ b/src/scss/utils/mixins/_form.scss
@@ -1,4 +1,4 @@
-@mixin create-input-elements($options:'') {
+@mixin input-elements-mixin($options:'') {
   input[type="email"]#{$options},
   input[type="number"]#{$options},
   input[type="search"]#{$options},
@@ -12,7 +12,7 @@
   }
 }
 
-@mixin create-checkradio($options:'') {
+@mixin checkradio-mixin($options:'') {
   input {
     &[type='checkbox']#{$options},
     &[type='radio']#{$options} {
