fix: match background color with meshki-black

--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -1,7 +1,8 @@
 // Base Colors //================================
-$background-color:                 #222;
-$transparent-color:                rgba(0, 0, 0, 0);
 $meshki-black:                     #222;
+$meshki-black-darker:              #1a1a1a;
+$background-color:                 $meshki-black;
+$transparent-color:                rgba(0, 0, 0, 0);
 $normal-black:                     #000;
 $white:                            #fff;
 
