fix: navbar now matches colors with footer

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,9 +1,7 @@
-
-
 // The footer tag, or a div with footer (Useful for IE)
 footer,
 .footer {
-  background-color: $footer-color-background;
+  background-color: $meshki-black-darker;
   border-top: 2px solid $text-color;
   display: block;
   position: absolute;
