--- a/src/scss/components/_colors.scss
+++ b/src/scss/components/_colors.scss
@@ -37,7 +37,7 @@ $form-checkradio-color:            #33bbf0;
 $form-color-placeholder:           #6a6a6a;
 
 // Navbar Colors //================================
-$navbar-color-button-active:       $footer-color-background;
+$navbar-color-button-active:       $text-color;
 $navbar-color-logo:                $text-color;
 $navbar-color-logo-hover:          #f5f5f5;
 $navbar-color-dropdown-button-bg:  #444;
