improve: anchor tag animation

--- a/src/scss/components/anchor.scss
+++ b/src/scss/components/anchor.scss
@@ -4,6 +4,7 @@
 a {
   color: $anchor-color-default;
   text-decoration: none;
+  transition: color .2s;
 
   &:hover {
     color: $anchor-color-hover;
