--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -1,5 +1,4 @@
-nav,
-.nav {
+nav, .nav {
   width: 100%;
   z-index: 1;
   // Fixed Navbar properties
@@ -8,7 +7,7 @@ nav,
   }
 
   ul {
-    background-color: $meshki-black;
+    background-color: $meshki-black-darker;
     border-bottom: 2px solid $text-color;
     list-style-type: none;
     margin: 0;
@@ -62,76 +61,72 @@ nav,
         background-color: $navbar-color-logo-hover;
         color: $normal-black;
       }
-    }
-  }
-}
 
-li {
-  /* Send the elements to the right side with nav-right */
-  &.nav-right {
-    float: right !important;
-    position: inherit;
-  }
+      /* Send the elements to the right side with nav-right */
+      &.nav-right {
+        float: right !important;
+        position: inherit;
+      }
 
-  /* Send the elements to the left side with nav-left */
-  &.nav-left {
-    float: left !important;
-    position: inherit;
-  }
+      /* Send the elements to the left side with nav-left */
+      &.nav-left {
+        float: left !important;
+        position: inherit;
+      }
 
-  /* Fix for #2 issue, where nav-dropdown-content would go off the screen. */
-  &.nav-dropdown.nav-right .nav-dropdown-content {
-    right: 0;
-  }
+      /* Fix for #2 issue, where nav-dropdown-content would go off the screen. */
+      &.nav-dropdown.nav-right .nav-dropdown-content {
+        right: 0;
+      }
 
-  &.nav-dropdown.nav-right ~ .nav-dropdown .nav-dropdown-content {
-    right: auto;
-  }
+      &.nav-dropdown.nav-right ~ .nav-dropdown .nav-dropdown-content {
+        right: auto;
+      }
 
-  /* Navigation Dropdown Button */
-  &.nav-dropdown {
-    display: inline-block;
+      /* Navigation Dropdown Button */
+      &.nav-dropdown {
+        display: inline-block;
 
-    /* Dropdown content attributes */
-    .nav-dropdown-content {
-      background-color: $navbar-color-button-active;
-      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
-      display: block;
-      min-width: 160px;
-      opacity: 0;
-      position: absolute;
-      transition: visibility .2s, opacity .2s ease-in-out;
-      visibility: hidden;
-      z-index: 1;
-    }
+        &:hover {
+          /* When the dropdown is open, change the color of dropdown's button */
+          .nav-dropdown-button {
+            background-color: $navbar-color-button-active;
+          }
+      
+          /* Display the content when the mouse is on dropdown's button */
+          .nav-dropdown-content {
+            opacity: 1;
+            visibility: visible;
+          }
+        }
 
-    /* Each link in dropdown's content */
-    .nav-dropdown-content a {
-      color: $text-color;
-      display: block;
-      padding: 12px 16px;
-      text-align: left;
-      text-decoration: none;
-    }
+        /* Dropdown content attributes */
+        .nav-dropdown-content {
+          background-color: $navbar-color-button-active;
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
+          display: block;
+          min-width: 160px;
+          opacity: 0;
+          position: absolute;
+          transition: visibility .2s, opacity .2s ease-in-out;
+          visibility: hidden;
+          z-index: 1;
+        }
 
-    /* When the mouse is on each option */
-    .nav-dropdown-content a:hover {
-      background-color: $navbar-color-dropdown-button-bg;
-    }
-  }
-}
+        /* Each link in dropdown's content */
+        .nav-dropdown-content a {
+          color: $text-color;
+          display: block;
+          padding: 12px 16px;
+          text-align: left;
+          text-decoration: none;
+        }
 
-.nav-dropdown {
-  &:hover {
-    /* When the dropdown is open, change the color of dropdown's button */
-    .nav-dropdown-button {
-      background-color: $navbar-color-button-active;
-    }
-
-    /* Display the content when the mouse is on dropdown's button */
-    .nav-dropdown-content {
-      opacity: 1;
-      visibility: visible;
+        /* When the mouse is on each option */
+        .nav-dropdown-content a:hover {
+          background-color: $navbar-color-dropdown-button-bg;
+        }
+      }
     }
   }
 }
