--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -6,7 +6,7 @@ $general-animation-duration:         .3s;
 }
 
 // Typography Variables
-$font-family:              'Open Sans', sans-serif;
+$font-family:              'Roboto Condensed', sans-serif;
 $font-weight:              400;
 $font-size-after:          1.6rem;
 
